Fix for Image alignment in image paragraph quote block

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -12,6 +12,7 @@
     margin-bottom: 20px;
   }
 
+
   .image-block {
     background: white;
     float: left;
@@ -167,6 +168,10 @@
   .n-column-image {
     margin-left: -7px;
     margin-right: -7px;
+    img{
+      width: auto !important;
+      height: auto !important;
+    }
     .image-block {
       width: auto;
       position: relative;
@@ -204,6 +209,9 @@
     .image-content {
 
       &.image-align-left {
+        .image-block{
+          margin-left: 0;
+        }
         margin-right: 18px;
         float: left;
         ~ .text-content {
@@ -213,6 +221,9 @@
         }
       }
       &.image-align-right {
+        .image-block{
+          margin-right: 0;
+        }
         margin-left: 18px;
         float: right;
         ~ .text-content {
@@ -225,9 +236,9 @@
 
     }
     .text-content {
-
       .block-quote {
         display: grid;
+        padding-top: 10px;
         .rich-text:lang(ur) {
           p b {
             padding-right: 0;
